# email-schedule

./: README.md  flow.txt
email-schedule-backend/: Cargo.toml
email-schedule-backend/src/: TODO  main.rs  server_state.rs
email-schedule-backend/src/server/: mod.rs
email-schedule-backend/web/: register.html
email-schedule-web/: package-lock.json  package.json
email-schedule-web/app/: routes.ts
email-schedule-web/app/routes/: about.tsx  home.tsx  redirect-auth.tsx
